Update increasing-memory-of-fire-server.rst